--- a/WebProsjekt/WB Prosjekt/css/style.css
+++ b/WebProsjekt/WB Prosjekt/css/style.css
@@ -80,8 +80,10 @@ header {
 }
 
 .content-left{
-    height: 200px;
+    height: 100%;
     float: left;
+    margin-bottom: 80px;
+    
 }
 
 .content-right{
