--- a/WebProsjekt/WB Prosjekt/css/style.css
+++ b/WebProsjekt/WB Prosjekt/css/style.css
@@ -79,6 +79,11 @@ header {
     
 }
 
+.fuckface{
+   margin-top: 20px;
+    margin-bottom: 80px;
+}
+
 .content-left{
     height: 100%;
     float: left;
