--- a/WebProsjekt/WB Prosjekt/css/style.css
+++ b/WebProsjekt/WB Prosjekt/css/style.css
@@ -48,8 +48,10 @@ header {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 40px;
     background-color: #f5f5f5;
+    text-align: right; 
+    padding-top: 9px; 
     
 }
 
