--- a/WebProsjekt/WB Prosjekt/css/slider.css
+++ b/WebProsjekt/WB Prosjekt/css/slider.css
@@ -16,8 +16,9 @@ body, figure {
   font-family: Istok Web, sans-serif;
   font-weight: 100;
 }
-div#captioned-gallery { 
-  width: 100%; 
+div#captioned-gallery {
+  margin-top:60px; 
+  width:100%; 
   height: 350px;
   overflow: hidden; 
 }
